--- a/src/Web.config
+++ b/src/Web.config
@@ -16,8 +16,8 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-NerdDinner-20120906143403;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-NerdDinner-20120906143403.mdf" providerName="System.Data.SqlClient" />
-    <add name="NerdDinnerContext" connectionString="Data Source=(localdb)\v11.0; Initial Catalog=NerdDinnerContext-20120906143708; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|NerdDinnerContext-20120906143708.mdf" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-NerdDinner-20120906143403.mdf" providerName="System.Data.SqlClient" />
+    <add name="NerdDinnerContext" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\NerdDinnerContext-20120906143708.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
