--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
 *.lock
 
-
 #################
 ## Eclipse
 #################
@@ -164,3 +163,8 @@ pip-log.txt
 
 # Mac crap
 .DS_Store
+src/Web.Release.config
+src/Web.Release.config
+src/Web.Release.config
+src/Web.Release.config
+src/Web.Release.config
