--- a/src/NerdDinner.csproj
+++ b/src/NerdDinner.csproj
@@ -284,7 +284,7 @@
     <None Include=".dockerignore">
       <DependentUpon>Dockerfile</DependentUpon>
     </None>
-    <None Include="Properties\PublishProfiles\NerdDinnerLAS.pubxml" />
+    <None Include="Properties\PublishProfiles\nerddinnerlift.pubxml" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
     <Content Include="Images\accent.png" />
     <Content Include="Images\bullet.png" />
