add windows server core image for supported vsts build

--- a/docker-compose.wincore.yml
+++ b/docker-compose.wincore.yml
@@ -5,4 +5,4 @@ services:
     image: nerddinner
     build:
       context: .\src
-      dockerfile: Dockerfile.WinCore
+      dockerfile: Dockerfile
