--- a/src/Dockerfile.WinCore
+++ b/src/Dockerfile.WinCore
@@ -1,4 +1,4 @@
-﻿FROM microsoft/aspnet:4.7.1
+﻿FROM mcr.microsoft.com/dotnet/framework/aspnet:4.8.1
 ARG source
 WORKDIR /inetpub/wwwroot
 COPY ${source:-obj/Docker/publish} .
